# statii

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  colours.py  docker-compose.yml  go.mod  go.sum  main.go  mystatus.py  pyproject.toml  statii.conf.example  statii.py
internal/comms/: message.go  store.go  store_test.go
internal/plugins/: README.md  config.go  config_test.go  github.go  github_actions.go  github_actions_test.go  github_issues.go  github_issues_test.go  github_pullrequests.go  github_pullrequests_test.go  github_test.go  interface.go  jira_issues.go  jira_issues_test.go  main_test.go  process.go  urls.go  urls_test.go
internal/ui/: app.go  datatable.go
plugins/: circle.py  githubissues.py  githubthings.py  jiraissues.py
